--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -5,7 +5,7 @@
 
     <!-- You can insert your own image assets here -->
     <!-- <item>
-        <bitmap
+        <bitmapx
             android:gravity="center"
             android:src="@mipmap/launch_image" />
     </item> -->
